# GenoScope-Pro

./: .gitignore  README.md  app.py  config.py  dataset.py  main.py  mutations_list.txt  pyproject.toml
core/: ai_engine.py  data_client.py
examples/: requirements.txt
ui/: visualizer.py
